Added new project

--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
 										<li><a href="https://github.com/eduvedras/SpaceDebris" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/rodrigomelopinto/LondonBikeRides">LondonBikeRides<br />
+										</a></h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/rodrigo.pinto5130/viz/LondonBikeRides_17145558584530/Painel1#1" class="image fit"><img src="images/Planet.png" alt="" /></a>
+									<p>A data vizualization project to vizualize the bike sharing in London.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/rodrigomelopinto/LondonBikeRides" class="button">View Project</a></li>
+									</ul>
+								</article>
 
 					</div>
 
