--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										<h2><a href="https://github.com/rodrigomelopinto/LondonBikeRides">LondonBikeRides<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/rodrigo.pinto5130/viz/LondonBikeRides_17145558584530/Painel1#1" class="image fit"><img src="images/Planet.png" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/rodrigo.pinto5130/viz/LondonBikeRides_17145558584530/Painel1#1" class="image fit"><img src="images/bikes.PNG" alt="" /></a>
 									<p>A data vizualization project to vizualize the bike sharing in London.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/rodrigomelopinto/LondonBikeRides" class="button">View Project</a></li>
